--- a/index.html
+++ b/index.html
@@ -268,7 +268,6 @@
             }
         }
     </style>
-    <script src="protect.js"></script>
 </head>
 <body>
     <div class="container">
@@ -286,9 +285,9 @@
     <div class="container">
         <section class="hero">
             <div class="hero-content">
-                <h1>Strategic & Operations Leadership for High-Growth Companies</h1>
+                <h1>Strategy & Operations Leader for High-Growth Companies</h1>
                 <p class="tagline">Driving growth, operational excellence, and cross-functional alignment</p>
-                <p class="hero-description">I help tech companies scale efficiently through data-driven strategy, cross-functional leadership, and operational excellence. With 11+ years of experience building and scaling businesses across consulting, marketplace, and SaaS environments, I deliver measurable results that accelerate your path to profitability.</p>
+                <p class="hero-description">I am a <strong>customer obsessed operator</strong>! I've successfully scaled/grown companies efficiently through data-driven strategy, cross-functional leadership, and operational excellence. With 11+ years of experience building and scaling businesses across consulting, marketplace, and SaaS environments, I deliver <strong>measurable results to grow sales and increase profitability</strong>.</p>
                 <a href="case-studies.html" class="cta-button">View My Work</a>
                 <a href="contact.html" class="secondary-button">Get In Touch</a>
             </div>
@@ -304,27 +303,27 @@
             <div class="value-cards">
                 <div class="value-card">
                     <h3>Strategic Operations</h3>
-                    <p>I design and implement operational frameworks that scale with your business, ensuring efficiency while maintaining quality. At Uber, I grew trips 31% and revenue 35% by building new processes to enhance marketplace dynamics.</p>
-                </div>
-                <div class="value-card">
-                    <h3>Cross-Functional Leadership</h3>
-                    <p>I excel at breaking down silos and aligning teams toward common objectives. At Octagos Health, I established shared objectives across sales, marketing, product, customer success, and finance teams to achieve growth targets.</p>
+                    <p>I design and implement operational frameworks that scale with your business, ensuring efficiency while maintaining quality. At Uber, I grew trips <strong>31% and revenue 35%</strong> in my markets by building new processes and features to enhance marketplace dynamics.</p>
                 </div>
                 <div class="value-card">
                     <h3>Data-Driven Decision Making</h3>
-                    <p>I build metrics frameworks and analytics systems that provide actionable insights. I've developed KPIs and dashboards that enable leadership teams to make informed decisions driving business growth.</p>
+                    <p>I use <strong>quantitative (SQL, excel, etc.) and qualitative research</strong> (customer and expert interviews) methods to develop insights that enable leadership teams to make informed decisions driving business growth. At Uber, I used SQL and driver interviews to identify and optimize systems/processes that saved <strong>>$90M annually</strong>.</p>
                 </div>
                 <div class="value-card">
                     <h3>Go-to-Market Strategy</h3>
-                    <p>I develop effective GTM strategies that drive revenue growth. At Bain, I achieved substantial growth by incentivizing channel partners to prioritize profitable customer segments for a B2B cybersecurity SaaS company.</p>
+                    <p>I develop effective GTM strategies that drive revenue growth. At Bain, I achieved substantial growth for a Cybersecurity client by <strong>incentivizing channel partners to prioritize profitable customer segments</strong> for a B2B cybersecurity SaaS company.</p>
                 </div>
                 <div class="value-card">
                     <h3>Revenue Operations</h3>
-                    <p>I build the systems and processes needed to scale revenue efficiently. At Octagos Health, I generated significant new ARR by building a CRM, establishing a sales funnel, and creating operational dashboards.</p>
+                    <p>I build the systems and processes needed to scale revenue efficiently. At Octagos Health, I generated significant new ARR by <strong>building a CRM, establishing a sales funnel, and creating dashboards</strong> to project long-term sales.</p>
                 </div>
                 <div class="value-card">
                     <h3>Financial Analysis</h3>
-                    <p>I leverage financial analysis to identify opportunities and optimize resources. In private equity due diligence work at Bain, I identified ~$100M in synergies by building detailed cost structure models.</p>
+                    <p>I leverage financial analysis to identify opportunities and optimize resources. In private equity due diligence work at Bain, I identified <strong>~$100M in synergies</strong> by building detailed cost structure models.</p>
+                </div>
+                <div class="value-card">
+                    <h3>Cross-Functional Leadership</h3>
+                    <p>I excel at <strong>breaking down silos and aligning teams</strong> toward common objectives. At Octagos Health, I established shared objectives across sales, marketing, product, customer success, and finance teams to achieve growth targets.</p>
                 </div>
             </div>
         </div>
