--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <a href="contact.html" class="secondary-button">Get In Touch</a>
             </div>
             <div class="hero-image">
-            <img src="./images/dhruv-profile.jpg" alt="Dhruv Goel headshot">
+            <img src="images/dhruv-profile.jpg?v=2" alt="Dhruv Goel headshot">
             </div>
         </section>
     </div>
