--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <a href="contact.html" class="secondary-button">Get In Touch</a>
             </div>
             <div class="hero-image">
-            <img src="images/dhruv-profile.jpg?v=2" alt="Dhruv Goel headshot">
+                <img src="./images/profile.jpg" alt="Dhruv Goel headshot">
             </div>
         </section>
     </div>
@@ -303,27 +303,27 @@
             <div class="value-cards">
                 <div class="value-card">
                     <h3>Strategic Operations</h3>
-                    <p>I design and implement operational frameworks that scale with your business, ensuring efficiency while maintaining quality. At Uber, I grew trips <strong>31% and revenue 35%</strong> in my markets by building new processes and features to enhance marketplace dynamics.</p>
+                    <p>I design and implement <strong>scalable operational frameworks</strong> that drive efficiency, enhance quality, and support sustainable business growth.</p>
                 </div>
                 <div class="value-card">
                     <h3>Data-Driven Decision Making</h3>
-                    <p>I use <strong>quantitative (SQL, excel, etc.) and qualitative research</strong> (customer and expert interviews) methods to develop insights that enable leadership teams to make informed decisions driving business growth. At Uber, I used SQL and driver interviews to identify and optimize systems/processes that saved <strong>>$90M annually</strong>.</p>
+                    <p>I leverage <strong>quantitative (SQL, Excel, etc.) and qualitative (customer and expert interviews)</strong> research to generate actionable insights, empowering leadership to make informed, strategic decisions that fuel business growth.</p>
                 </div>
                 <div class="value-card">
                     <h3>Go-to-Market Strategy</h3>
-                    <p>I develop effective GTM strategies that drive revenue growth. At Bain, I achieved substantial growth for a Cybersecurity client by <strong>incentivizing channel partners to prioritize profitable customer segments</strong> for a B2B cybersecurity SaaS company.</p>
+                    <p>I craft and execute <strong>data-driven GTM strategies</strong> that optimize market entry, accelerate revenue growth, and drive competitive advantage.</p>
                 </div>
                 <div class="value-card">
                     <h3>Revenue Operations</h3>
-                    <p>I build the systems and processes needed to scale revenue efficiently. At Octagos Health, I generated significant new ARR by <strong>building a CRM, establishing a sales funnel, and creating dashboards</strong> to project long-term sales.</p>
+                    <p>I build and refine <strong>revenue operations systems</strong> that enhance efficiency, maximize profitability, and support scalable growth.</p>
                 </div>
                 <div class="value-card">
                     <h3>Financial Analysis</h3>
-                    <p>I leverage financial analysis to identify opportunities and optimize resources. In private equity due diligence work at Bain, I identified <strong>~$100M in synergies</strong> by building detailed cost structure models.</p>
+                    <p>I apply <strong>deep financial analysis</strong> to uncover opportunities, mitigate risks, and optimize resource allocation for improved business performance.</p>
                 </div>
                 <div class="value-card">
                     <h3>Cross-Functional Leadership</h3>
-                    <p>I excel at <strong>breaking down silos and aligning teams</strong> toward common objectives. At Octagos Health, I established shared objectives across sales, marketing, product, customer success, and finance teams to achieve growth targets.</p>
+                    <p>I excel at <strong>breaking down silos, fostering collaboration, and aligning cross-functional teams</strong> to achieve strategic business objectives.</p>
                 </div>
             </div>
         </div>
