--- a/experience.html
+++ b/experience.html
@@ -422,7 +422,7 @@
         <section class="resume-section">
             <div class="resume-header">
                 <h2 class="section-title">My Professional Journey</h2>
-                <a href="your-resume.pdf" class="resume-download" download>Download Full Resume</a>
+                <a href="Dhruv_Goel_Resume.pdf" class="resume-download" download>Download Full Resume</a>
             </div>
             
             <div class="experience-timeline">
