--- a/contact.html
+++ b/contact.html
@@ -337,8 +337,7 @@
                     <div class="info-item">
                         <h3>Connect</h3>
                         <div class="social-links">
-                            <a href="https://linkedin.com/in/yourprofile" class="social-link" target="_blank">Li</a>
-                            <a href="https://twitter.com/yourhandle" class="social-link" target="_blank">Tw</a>
+                            <a href="https://www.linkedin.com/in/dhruvgoel2/" class="social-link" target="_blank">Li</a>
                         </div>
                     </div>
                 </div>
