--- a/index.html
+++ b/index.html
@@ -175,6 +175,12 @@
             font-size: 20px;
             margin-bottom: 15px;
             color: #1a1a1a;
+            text-align: center;
+        }
+        
+        .icon {
+            text-align: center;
+            margin-bottom: 20px;
         }
         
         .icon i {
@@ -289,8 +295,8 @@
             <div class="hero-content">
                 <h1>Strategy & Operations Leader for High-Growth Companies</h1>
                 <p class="tagline">Driving growth, operational excellence, and cross-functional alignment</p>
-                <p class="hero-description">Hello! I'm Dhruv, a Strategy and Operations leader with over 11 years of experience in consulting, B2B SaaS, and marketplaces. I thrive on leveraging data analysis, creative strategies, and cross-functional leadership to drive growth and operational excellence.<br><br>
-Beyond my professional endeavors, I'm passionate about experimenting with AI and understanding its functional and real-world applications. In fact, I made this entire website entirely through Claude 3.7 without writing a single line of code. Feel free to browse through some of my projects/experiments, and don't hesitate to connect!</p>
+                <p class="hero-description">Hello! I'm Dhruv, a Strategy and Operations leader with over 11 years of experience in consulting, B2B SaaS, and marketplaces. I thrive on leveraging <strong>data analysis</strong>, creative strategies, and <strong>cross-functional leadership</strong> to drive growth and operational excellence.<br><br>
+Beyond my professional endeavors, I'm passionate about experimenting with AI and understanding its <strong>functional applications</strong>. In fact, I made this entire website entirely through Claude 3.7 without writing a single line of code. Feel free to browse through some of my projects/experiments, and don't hesitate to connect!</p>
                 <a href="case-studies.html" class="cta-button">View My Work</a>
                 <a href="contact.html" class="secondary-button">Get In Touch</a>
             </div>
