--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="experience.html">Experience</a></li>
-                <li><a href="case-studies.html">Case Studies</a></li>
+                <li><a href="case-studies.html">AI Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -345,7 +345,7 @@ Beyond my professional endeavors, I'm passionate about experimenting with AI and
                     <h4>Quick Links</h4>
                     <a href="index.html">Home</a>
                     <a href="experience.html">Experience</a>
-                    <a href="case-studies.html">Case Studies</a>
+                    <a href="case-studies.html">AI Projects</a>
                     <a href="contact.html">Contact</a>
                 </div>
                 <div class="footer-section">
