--- a/experience.html
+++ b/experience.html
@@ -323,7 +323,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="experience.html">Experience</a></li>
-                <li><a href="case-studies.html">Case Studies</a></li>
+                <li><a href="case-studies.html">AI Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -487,7 +487,7 @@
                     <h4>Quick Links</h4>
                     <a href="index.html">Home</a>
                     <a href="experience.html">Experience</a>
-                    <a href="case-studies.html">Case Studies</a>
+                    <a href="case-studies.html">AI Projects</a>
                     <a href="contact.html">Contact</a>
                 </div>
                 <div class="footer-section">
