--- a/contact.html
+++ b/contact.html
@@ -290,7 +290,6 @@
             }
         }
     </style>
-    <script src="protect.js"></script>
 </head>
 <body>
     <div class="container">
@@ -299,7 +298,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="experience.html">Experience</a></li>
-                <li><a href="case-studies.html">Case Studies</a></li>
+                <li><a href="case-studies.html">AI Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -337,7 +336,8 @@
                     <div class="info-item">
                         <h3>Connect</h3>
                         <div class="social-links">
-                            <a href="https://www.linkedin.com/in/dhruvgoel2/" class="social-link" target="_blank">Li</a>
+                            <a href="https://linkedin.com/in/yourprofile" class="social-link" target="_blank">Li</a>
+                            <a href="https://twitter.com/yourhandle" class="social-link" target="_blank">Tw</a>
                         </div>
                     </div>
                 </div>
@@ -402,7 +402,7 @@
                     <h4>Quick Links</h4>
                     <a href="index.html">Home</a>
                     <a href="experience.html">Experience</a>
-                    <a href="case-studies.html">Case Studies</a>
+                    <a href="case-studies.html">AI Projects</a>
                     <a href="contact.html">Contact</a>
                 </div>
                 <div class="footer-section">
