--- a/case-studies.html
+++ b/case-studies.html
@@ -369,9 +369,14 @@
                             <button class="see-less-btn" onclick="collapseCard(this)">See Less</button>
                         </div>
                     </div>
+                    <!-- Replace the current project-media div with this code -->
                     <div class="project-media">
-                        <img src="./images/claude-website.png" alt="Building website with Claude AI" onerror="this.src='/api/placeholder/500/300'; this.alt='Placeholder for Claude AI website building image';">
+                        <video width="100%" controls>
+                            <source src="./images/claude-website.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
                     </div>
+                    
                 </div>
             </div>
         </section>
