--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ Beyond my professional endeavors, I'm passionate about experimenting with AI and
             <div class="footer-content">
                 <div class="footer-section">
                     <h4>About Me</h4>
-                    <p>Strategy and Operations leader with 11+ years of experience across consulting (Bain, EY), B2B SaaS (Octagos Health), and marketplace (Uber) environments. MBA from Kellogg School of Management with expertise in scaling businesses across various growth stages.</p>
+                    <p>Strategy and Operations leader with 11+ years of experience across consulting (Bain, EY), B2B SaaS (Octagos Health), and marketplace (Uber) environments. MBA from Kellogg School of Management and undergraduate degree from the University of Texas at Austin with expertise in scaling businesses across various growth stages.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
