--- a/experience.html
+++ b/experience.html
@@ -355,7 +355,7 @@
                     </div>
                     <p class="job-description">Led strategic and operational initiatives for a healthcare B2B SaaS company, focusing on driving sales through insights and data (sales enablement) and establishing an operating rhythm with KPIs and dashboards across all teams</p>
                     <ul class="achievements">
-                        <li class="achievement-item">Generated <strong>significant new ARR</strong> by <strong>converting our CRM</strong> from a rolodex to functional CRM platform, <strong>mapped and codified our sales funnel</strong> and conversion rates, built <strong>automated dashboards</strong> for each sales rep to quantify their funnel and <strong>forecast sales</strong> up to 6 months</li>
+                        <li class="achievement-item">Accelerated <strong>~$1M new ARR</strong> by implementing RevOps infrastructure such as  <strong>establishing a functional CRM</strong>, codifying <strong>sales funnel</strong> and tracking <strong>conversion rates</strong> across each stage, and building <strong>automated dashboards</strong> to track progress for each sales rep and <strong>forecast sales</strong> up to 6 months</li>
                         <li class="achievement-item">Established an <strong>operating rhythm</strong> by working <strong>cross functionally</strong> with each team to build KPIs, encourage <strong>data driven decisions</strong>, and review progress on a scheduled cadence with executives</li>
                     </ul>
                 </div>
@@ -370,8 +370,8 @@
                     </div>
                     <p class="job-description">Led due diligence and GTM strategy engagements for PE funds and cybersecurity SaaS companies. Specialized in conducting qualitative and quantitative market research/analysis to drive insights for growth and product strategy.</p>
                     <ul class="achievements">
-                        <li class="achievement-item">Identified <strong>core customer needs</strong> through <strong>surveys and interviews</strong>, and translated findings to a <strong>product roadmap</strong> for a ~$600M B2B cybersecurity SaaS company</li>
-                        <li class="achievement-item">Mapped the <strong>competitive landscape</strong> of walled gardens across the broader ad industry, and identified <strong>key threats/opportunities</strong> of pending data privacy laws to the client's growth outlook</li>
+                        <li class="achievement-item">Led <strong>customer research</strong> for $600M B2B SaaS client, translating 20+ expert interviews, surveys, and market analysis into <strong>prioritized product roadmap</strong> in collaboration with product and executive leadership</li>
+                        <li class="achievement-item">Identified <strong>~$100M in operational synergies</strong> through rigorous <strong>top-down cost structure modeling</strong> for a corporate M&A diligence in the digital advertising industry</li>
                     </ul>
                 </div>
                 
@@ -385,8 +385,8 @@
                     </div>
                     <p class="job-description">Led growth and process improvement initiatives to grow Uber's rideshare and food delivery marketplaces. Specialized in using SQL and customer interviews to build features and processes that resulted in higher driver retention, rider satisfaction, revenue, and profit</p>
                     <ul class="achievements">
+                        <li class="achievement-item">Saved <strong>$90M</strong> marketplace inefficiency through <strong>SQL analysis and user research</strong>, then partnered with engineering teams to implement algorithmic improvements that boosted <strong>retention by 5%</strong> </li>
                         <li class="achievement-item">Saved <strong>$700k/year</strong> by using <strong>SMS marketing</strong> to proactively prevent lost items in high-volume geographies</li>
-                        <li class="achievement-item">Saved <strong>$90M</strong> and boosted <strong>retention 5%</strong> by fixing <strong>algorithmic errors</strong> in 183 markets</li>
                     </ul>
                 </div>
                 
